Fixed pathissue with GitHub img

--- a/Projects-Landing-Page-main-copy/projectspage.css
+++ b/Projects-Landing-Page-main-copy/projectspage.css
@@ -15,7 +15,7 @@
 }
 
 #project-last {
-    background-image: url("/Projects-Landing-Page-main/media/GitHub.jpg");
+    background-image: url("../Projects-Landing-Page-main/media/GitHub.jpg");
     background-size: cover;
 }
 
