--- a/Lightbox-Gallery/style.css
+++ b/Lightbox-Gallery/style.css
@@ -465,121 +465,121 @@ input[type="range"]:active::-webkit-slider-thumb {
 }
 
 #img3 {
-    background-image: url("/media/2022/Floreak Cheese Making Illustration-1.png");
+    background-image: url("/media/2022/FloreakCheeseMakingIllustration-1.png");
     background-size: cover;
 }
 
 #img4 {
-    background-image: url("/media/2022/alphabet rough sketch-1.png");
+    background-image: url("/media/2022/alphabetroughsketch-1.png");
     background-size: cover;
 }
 
 #img5 {
-    background-image: url("/media/2018/Roof Reconstruction C.JPG");
+    background-image: url("/media/2018/RoofReconstructionC.JPG");
     background-size: cover;
 }
 
 #img6 {
-    background-image: url("/media/2018/Pathway Illustration.jpg");
+    background-image: url("/media/2018/PathwayIllustration.jpg");
     background-size: cover;
 }
 
 #img7 {
-    background-image: url("/media/2018/MM2018 llustration Weaving.jpg");
+    background-image: url("/media/2018/MM2018IllustrationWeaving.jpg");
     background-size: cover;
 }
 
 #img8 {
-    background-image: url("/media/2018/MM2018 Illustration Women.jpg");
+    background-image: url("/media/2018/MM2018IllustrationWomen.jpg");
     background-size: cover;
 }
 
 #img9 {
-    background-image: url("/media/2018/MM2018 Illustration Loom.jpg");
+    background-image: url("/media/2018/MM2018IllustrationLoom.jpg");
     background-size: cover;
 }
 
 #img10 {
-    background-image: url("/media/2018/MM2018 Illustration Kilns.jpg");
+    background-image: url("/media/2018/MM2018IllustrationKilns.jpg");
     background-size: cover;
 }
 
 #img11 {
-    background-image: url("/media/2018/MM2018 Illustration Infill of Well.jpg");
+    background-image: url("/media/2018/MM2018IllustrationInfillofWell.jpg");
     background-size: cover;
 }
 
 #img12 {
-    background-image: url("/media/2018/MM2018 Illustration EPOC 4 2.jpg");
+    background-image: url("/media/2018/MM2018IllustrationEPOC42.jpg");
     background-size: cover;
 }
 
 #img13 {
-    background-image: url("/media/2018/MM2018 Illustration EPOC 4.jpg");
+    background-image: url("/media/2018/MM2018IllustrationEPOC4.jpg");
     background-size: cover;
 }
 
 #img14 {
-    background-image: url("/media/2018/MM2018 Illustration Domestic Architecture.jpg");
+    background-image: url("/media/2018/MM2018IllustrationDomesticArchitecture.jpg");
     background-size: cover;
 }
 
 #img15 {
-    background-image: url("/media/2018/Kiln Reconstruction.JPG");
+    background-image: url("/media/2018/KilnReconstruction.JPG");
     background-size: cover;
 }
 
 #img16 {
-    background-image: url("/media/2015/Wolf Drawing.jpg");
+    background-image: url("/media/2015/WolfDrawing.jpg");
     background-size: cover;
 }
 
 #img17 {
-    background-image: url("/media/1995/Section - Orientalizing and Archaic Phases, 1995.jpg");
+    background-image: url("/media/1995/Section-OrientalizingandArchaicPhases,1995.jpg");
     background-size: cover;
 }
 
 #img18 {
-    background-image: url("/media/1995/Reconstruction Upper Building, 1995.jpg");
+    background-image: url("/media/1995/ReconstructionUpperBuilding,1995.jpg");
     background-size: cover;
 }
 
 #img19 {
-    background-image: url("/media/1994/MM 94-06.jpg");
+    background-image: url("/media/1994/MM94-06.jpg");
     background-size: cover;
 }
 
 #img20 {
-    background-image: url("/media/1994/MM 94-04.jpg");
+    background-image: url("/media/1994/MM94-04.jpg");
     background-size: cover;
 }
 
 #img21 {
-    background-image: url("/media/1994/MM 94-02.jpg");
+    background-image: url("/media/1994/MM94-02.jpg");
     background-size: cover;
 }
 
 #img22 {
-    background-image: url("/media/1994/MM 94-01.jpg");
+    background-image: url("/media/1994/MMM94-01.jpg");
     background-size: cover;
 }
 
 #img23 {
-    background-image: url("/media/1989/Reconstructed Section 1 S.E. Building, 1989.jpg");
+    background-image: url("/media/1989/ReconstructedSection1S.E.Building,1989.jpg");
     background-size: cover;
 }
 
 #img24 {
-    background-image: url("/media/1989/Reconstructed Roof Elements S.E. Building, Version 2 - 1989.jpg");
+    background-image: url("/media/1989/ReconstructedRoofElementsS.E.Building,Version2-1989.jpg");
     background-size: cover;
 }
 
 #img25 {
-    background-image: url("/media/1989/Reconstructed Roof Elements S.E. Building, Version 2 - 1989 (2).jpg");
+    background-image: url("/media/1989/ReconstructedRoofElementsS.E.Building,Version2-1989(2).jpg");
     background-size: cover;
 }
 
 #img26 {
-    background-image: url("/media/1989/Reconstructed Elevation S.E. Building, 1989.jpg");
+    background-image: url("/media/1989/ReconstructedElevationS.E.Building,1989.jpg");
     background-size: cover;
 }
