change file name

--- a/Lightbox-Gallery/style.css
+++ b/Lightbox-Gallery/style.css
@@ -575,7 +575,7 @@ input[type="range"]:active::-webkit-slider-thumb {
 }
 
 #img25 {
-    background-image: url("/static-web-showing/Lightbox-Gallery/media/1989/ReconstructedRoofElementsS.E.Building,Version2-1989(2).jpg");
+    background-image: url("/static-web-showing/Lightbox-Gallery/media/1989/ReconstructedRoofElementsS.E.Building,Version2-1989-2.jpg");
     background-size: cover;
 }
 
