--- a/Projects-Landing-Page-main-copy/projectspage.css
+++ b/Projects-Landing-Page-main-copy/projectspage.css
@@ -14,6 +14,11 @@
     background-size: cover;
 }
 
+#project-4 {
+    background-image: url("media/coverphotoforlightbox.jpeg");
+    background-size: cover;
+}
+
 #project-last {
     background-image: url("media/GitHub.jpg");
     background-size: cover;
