--- a/Projects-Landing-Page-main-copy/projectspage.css
+++ b/Projects-Landing-Page-main-copy/projectspage.css
@@ -15,7 +15,7 @@
 }
 
 #project-4 {
-    background-image: url("../media/coverphotoforlightbox.jpeg");
+    background-image: url("media/coverphotoforlightbox.jpeg");
     background-size: cover;
 }
 
