--- a/Lightbox-Gallery/style.css
+++ b/Lightbox-Gallery/style.css
@@ -38,6 +38,12 @@ body {
     transition: 1s;
 }
 
+#navbarButtons {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
 .bi-arrow-down-up {
     color: rgb(154, 112, 85);
 }
@@ -121,8 +127,7 @@ body {
     border-radius: 50%;
     font-size: 30px;
     opacity: 1;
-    margin-bottom: 7px;
-    margin-left: 5px;
+    transform: translateY(-4px);
 }
 
 .openbtn:hover {
@@ -233,9 +238,7 @@ body {
     background-color: rgba(0, 0, 0, 0);
     border-color: rgba(0, 0, 0, 0);
     color: #9a6f55;
-    position: relative;
-    margin-left: 64%;
-    margin-top: -5px;
+    transform: translateY(-2px);
 }
 
 #closeHelp {
