--- a/Projects-Landing-Page-main-copy/projectspage.css
+++ b/Projects-Landing-Page-main-copy/projectspage.css
@@ -20,7 +20,12 @@
 }
 
 #project-5 {
-    background-image: url("openContextReader/ocSearchCover.png")
+    background-image: url("../openContextReader/ocSearchCover.png");
+    background-size: cover;
+}
+
+#project-6 {
+    background-image: url("../3d-viewer/3dViewercoverimage.png");
     background-size: cover;
 }
 
