--- a/Projects-Landing-Page-main-copy/projectspage.css
+++ b/Projects-Landing-Page-main-copy/projectspage.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
 /*CHANGE COVER PHOTOS HERE!!! All cover photos should have background-size:cover*/
 #project-1 {
     background-image: url("media/gettingstarted.png");
